--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0-rc17",
+    "headlessui": "^0.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
